Rename and add neuroglancer remote support

--- a/exercises/01_training.ipynb
+++ b/exercises/01_training.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "\n",
     "\n",
     "# A simple gunpowder pipeline for loading and manipulating data:\n",
-    "data_dir = '../../woodshole/segmentation/data'\n",
+    "data_dir = '../../jan/segmentation/data'\n",
     "\n",
     "samples = [\n",
     "    'sample_A',\n",
@@ -102,89 +102,21 @@
     "# Exercise 0.2 \n",
     "## Visualize data using neuroglancer\n",
     "\n",
-    "Exercise 0.1 generated a file in your working directory containg the raw EM data, neuron segmentation and affinities. The following script lets you view the data. Run both cells below and click on the resulting link. You can enable and disable layers by clicking on them. Explore the data. What do the different colors of the affinities mean? How does it relate to the segmentation?"
+    "Exercise 0.1 generated a file in your working directory containg the raw EM data, neuron segmentation and affinities. The following script lets you view the data. Run both cells below and click on the resulting link. You can enable and disable layers by clicking on them. Explore the data. What do the different colors of the affinities mean? How does it relate to the segmentation?\n",
+    "\n",
+    "If you double click on a particular segment neuroglancer allows you to view the 3D mesh of the object."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://ecksteinn-ws1.int.janelia.org:39621/v/e114f4b5b1ade3301e18313656b870a11ee49865/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in callback None()\n",
-      "handle: <Handle cancelled>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/asyncio/events.py\", line 126, in _run\n",
-      "    self._callback(*self._args)\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/platform/asyncio.py\", line 122, in _handle_events\n",
-      "    handler_func(fileobj, events)\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/stack_context.py\", line 300, in null_wrapper\n",
-      "    return fn(*args, **kwargs)\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 713, in _handle_events\n",
-      "    self._handle_write()\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 1063, in _handle_write\n",
-      "    self._write_buffer.advance(num_bytes)\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 184, in advance\n",
-      "    assert 0 < size <= self._size\n",
-      "AssertionError\n",
-      "Exception in callback None()\n",
-      "handle: <Handle cancelled>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/asyncio/events.py\", line 126, in _run\n",
-      "    self._callback(*self._args)\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/platform/asyncio.py\", line 122, in _handle_events\n",
-      "    handler_func(fileobj, events)\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/stack_context.py\", line 300, in null_wrapper\n",
-      "    return fn(*args, **kwargs)\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 713, in _handle_events\n",
-      "    self._handle_write()\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 1063, in _handle_write\n",
-      "    self._write_buffer.advance(num_bytes)\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 184, in advance\n",
-      "    assert 0 < size <= self._size\n",
-      "AssertionError\n",
-      "Exception in callback None()\n",
-      "handle: <Handle cancelled>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/asyncio/events.py\", line 126, in _run\n",
-      "    self._callback(*self._args)\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/platform/asyncio.py\", line 122, in _handle_events\n",
-      "    handler_func(fileobj, events)\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/stack_context.py\", line 300, in null_wrapper\n",
-      "    return fn(*args, **kwargs)\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 713, in _handle_events\n",
-      "    self._handle_write()\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 1063, in _handle_write\n",
-      "    self._write_buffer.advance(num_bytes)\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 184, in advance\n",
-      "    assert 0 < size <= self._size\n",
-      "AssertionError\n",
-      "Exception in callback None()\n",
-      "handle: <Handle cancelled>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/asyncio/events.py\", line 126, in _run\n",
-      "    self._callback(*self._args)\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/platform/asyncio.py\", line 122, in _handle_events\n",
-      "    handler_func(fileobj, events)\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/stack_context.py\", line 300, in null_wrapper\n",
-      "    return fn(*args, **kwargs)\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 713, in _handle_events\n",
-      "    self._handle_write()\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 1063, in _handle_write\n",
-      "    self._write_buffer.advance(num_bytes)\n",
-      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 184, in advance\n",
-      "    assert 0 < size <= self._size\n",
-      "AssertionError\n"
+      "http://172.83.14.204:42551/v/cdffd852c880fef9568ebc2a30e1e67ca28845b1/\n"
      ]
     }
    ],
@@ -194,7 +126,11 @@
     "import daisy\n",
     "import numpy as np\n",
     "\n",
-    "data_file = './snapshots/00000003.hdf'\n",
+    "# Replace my_ip with your public paperspace ip as shown in your browser\n",
+    "my_ip = \"172.83.14.204\"\n",
+    "neuroglancer.set_server_bind_address('0.0.0.0', 8889)\n",
+    "\n",
+    "data_file = './snapshots/00000000.hdf'\n",
     "affs_ds = daisy.open_ds(data_file, 'volumes/affinities')\n",
     "affs_ds.data = np.array(affs_ds.data, dtype=np.float32)\n",
     "labels_ds = daisy.open_ds(data_file, 'volumes/labels/neuron_ids')\n",
@@ -207,7 +143,7 @@
     "    funlibng.add_layer(s, labels_ds, 'labels')\n",
     "    funlibng.add_layer(s, affs_ds, 'affinities', shader='rgb')\n",
     "\n",
-    "print(viewer.__str__())"
+    "print(viewer.__str__().replace(\"localhost\", my_ip))"
    ]
   },
   {
@@ -218,7 +154,9 @@
     "## Using gunpowder with tensorflow for training a 3D-UNet for affinity prediction\n",
     "#### mknet.py\n",
     "\n",
-    "In this exercise we ask you to fill in the given template file to create a computation graph for your neural network. Follow the instructions in the code and make use of help and documentations."
+    "In this exercise we ask you to fill in the given template file to create a computation graph for your neural network. Follow the instructions in the code and make use of help and documentations. \n",
+    "\n",
+    "As usual if you are not sure about what a function does or what its argument is navigate to the function and press ```shift + tab``` to display arguments and documentation."
    ]
   },
   {
@@ -467,7 +405,7 @@
     "\n",
     "\n",
     "# Adapt the path to where the training data is stored:\n",
-    "data_dir = '../data'\n",
+    "data_dir = '../../jan/segmentation/data'\n",
     "\n",
     "samples = [\n",
     "    'sample_A',\n",
@@ -643,7 +581,10 @@
     "import funlib.show.neuroglancer as funlibng\n",
     "import daisy\n",
     "import numpy as np\n",
+    "\n",
     "\"\"\"\n",
+    "Replace the path for the data file with the snapshot you want to visualize. \n",
+    "\n",
     "data_file = ...\n",
     "\"\"\"\n",
     "\n",
@@ -658,7 +599,10 @@
     "labels_ds = daisy.open_ds(data_file, 'volumes/labels/neuron_ids')\n",
     "raw_ds = daisy.open_ds(data_file, 'volumes/raw')\n",
     "\n",
-    "neuroglancer.set_server_bind_address('0.0.0.0')\n",
+    "# Replace my_ip with your public paperspace ip as shown in your browser\n",
+    "my_ip = \"172.83.14.204\"\n",
+    "neuroglancer.set_server_bind_address('0.0.0.0', 8889)\n",
+    "\n",
     "viewer = neuroglancer.Viewer()\n",
     "with viewer.txn() as s:\n",
     "    funlibng.add_layer(s, raw_ds, 'raw')\n",
@@ -667,7 +611,7 @@
     "    funlibng.add_layer(s, pred_affs_ds, 'pred_affinities', shader='rgb')\n",
     "    funlibng.add_layer(s, gradients_ds, 'gradients')\n",
     "\n",
-    "print(viewer.__str__())"
+    "print(viewer.__str__().replace(\"localhost\", my_ip))"
    ]
   },
   {
