Sync exercises with solutions

--- a/solutions/training_solution.ipynb
+++ b/solutions/training_solution.ipynb
@@ -102,7 +102,9 @@
     "# Exercise 0.2 \n",
     "## Visualize data using neuroglancer\n",
     "\n",
-    "Exercise 0.1 generated a file in your working directory containg the raw EM data, neuron segmentation and affinities. The following script lets you view the data. Run both cells below and click on the resulting link. You can enable and disable layers by clicking on them. Explore the data. What do the different colors of the affinities mean? How does it relate to the segmentation?"
+    "Exercise 0.1 generated a file in your working directory containg the raw EM data, neuron segmentation and affinities. The following script lets you view the data. Run both cells below and click on the resulting link. You can enable and disable layers by clicking on them. Explore the data. What do the different colors of the affinities mean? How does it relate to the segmentation?\n",
+    "\n",
+    "If you double click on a particular segment neuroglancer allows you to view the 3D mesh of the object."
    ]
   },
   {
@@ -115,6 +117,10 @@
     "import funlib.show.neuroglancer as funlibng\n",
     "import daisy\n",
     "import numpy as np\n",
+    "\n",
+    "# Replace my_ip with your public paperspace ip as shown in your browser\n",
+    "my_ip = \"172.83.14.204\"\n",
+    "neuroglancer.set_server_bind_address('0.0.0.0', 8889)\n",
     "\n",
     "data_file = './snapshots/00000000.hdf'\n",
     "affs_ds = daisy.open_ds(data_file, 'volumes/affinities')\n",
@@ -129,7 +135,7 @@
     "    funlibng.add_layer(s, labels_ds, 'labels')\n",
     "    funlibng.add_layer(s, affs_ds, 'affinities', shader='rgb')\n",
     "\n",
-    "print(viewer.__str__())"
+    "print(viewer.__str__().replace(\"localhost\", my_ip))"
    ]
   },
   {
@@ -140,7 +146,9 @@
     "## Using gunpowder with tensorflow for training a 3D-UNet for affinity prediction\n",
     "#### mknet.py\n",
     "\n",
-    "In this exercise we ask you to fill in the given template file to create a computation graph for your neural network. Follow the instructions in the code and make use of help and documentations."
+    "In this exercise we ask you to fill in the given template file to create a computation graph for your neural network. Follow the instructions in the code and make use of help and documentations.\n",
+    "\n",
+    "As usual if you are not sure about what a function does or what its argument is navigate to the function and press ```shift + tab``` to display arguments and documentation."
    ]
   },
   {
@@ -572,7 +580,10 @@
     "labels_ds = daisy.open_ds(data_file, 'volumes/labels/neuron_ids')\n",
     "raw_ds = daisy.open_ds(data_file, 'volumes/raw')\n",
     "\n",
-    "neuroglancer.set_server_bind_address('0.0.0.0')\n",
+    "# Replace my_ip with your public paperspace ip as shown in your browser\n",
+    "my_ip = \"172.83.14.204\"\n",
+    "neuroglancer.set_server_bind_address('0.0.0.0', 8889)\n",
+    "\n",
     "viewer = neuroglancer.Viewer()\n",
     "with viewer.txn() as s:\n",
     "    funlibng.add_layer(s, raw_ds, 'raw')\n",
@@ -581,7 +592,7 @@
     "    funlibng.add_layer(s, pred_affs_ds, 'pred_affinities', shader='rgb')\n",
     "    funlibng.add_layer(s, gradients_ds, 'gradients')\n",
     "\n",
-    "print(viewer.__str__())"
+    "print(viewer.__str__().replace(\"localhost\", my_ip))"
    ]
   },
   {
