--- a/solutions/training_solution.ipynb
+++ b/solutions/training_solution.ipynb
@@ -8,7 +8,7 @@
     "## Introduction to EM data, neuron segmentation and gunpowder\n",
     "### A simple gunpowder example pipeline for loading and manipulating data\n",
     "\n",
-    "Become familiar with gunpowder. Read and try to understand the following code as well as the general principle behind gunpowder. Read the introductory example in the gunpowder documentation: https://github.com/funkey/gunpowder/"
+    "Become familiar with gunpowder. Read and try to understand the following code as well as the general principle behind gunpowder. Read the introductory example in the gunpowder documentation http://funkey.science/gunpowder and gunpowder tutorial http://funkey.science/gunpowder/tutorial.html"
    ]
   },
   {
@@ -71,7 +71,6 @@
     "        }\n",
     "    ) +\n",
     "    Normalize(raw) + \n",
-    "    #Pad(labels, None) +\n",
     "    RandomLocation()\n",
     "    for sample in samples\n",
     "    )\n",
@@ -109,9 +108,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "Unable to open file (unable to open file: name = './snapshots/00000001.hdf', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-698436d39dbb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mdata_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'./snapshots/00000001.hdf'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0maffs_ds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdaisy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen_ds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'volumes/affinities'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0maffs_ds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maffs_ds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mlabels_ds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdaisy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen_ds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'volumes/labels/neuron_ids'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Code/wh2019_segmentation/src/daisy/daisy/datasets.py\u001b[0m in \u001b[0;36mopen_ds\u001b[0;34m(filename, ds_name, mode)\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m         \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"opening H5 dataset %s in %s\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mds_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 97\u001b[0;31m         \u001b[0mds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5py\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mds_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     98\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m         \u001b[0mvoxel_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moffset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_read_voxel_size_offset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'C'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/h5py/_hl/files.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, mode, driver, libver, userblock_size, swmr, rdcc_nslots, rdcc_nbytes, rdcc_w0, track_order, **kwds)\u001b[0m\n\u001b[1;32m    392\u001b[0m                 fid = make_fid(name, mode, userblock_size,\n\u001b[1;32m    393\u001b[0m                                \u001b[0mfapl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfcpl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmake_fcpl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrack_order\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrack_order\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 394\u001b[0;31m                                swmr=swmr)\n\u001b[0m\u001b[1;32m    395\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    396\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mswmr_support\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/h5py/_hl/files.py\u001b[0m in \u001b[0;36mmake_fid\u001b[0;34m(name, mode, userblock_size, fapl, fcpl, swmr)\u001b[0m\n\u001b[1;32m    168\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mswmr\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mswmr_support\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    169\u001b[0m             \u001b[0mflags\u001b[0m \u001b[0;34m|=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mACC_SWMR_READ\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 170\u001b[0;31m         \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfapl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfapl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    171\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'r+'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    172\u001b[0m         \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mACC_RDWR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfapl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfapl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mh5py/h5f.pyx\u001b[0m in \u001b[0;36mh5py.h5f.open\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mOSError\u001b[0m: Unable to open file (unable to open file: name = './snapshots/00000001.hdf', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)"
+     ]
+    }
+   ],
    "source": [
     "import neuroglancer\n",
     "import funlib.show.neuroglancer as funlibng\n",
@@ -122,7 +139,7 @@
     "my_ip = \"172.83.14.204\"\n",
     "neuroglancer.set_server_bind_address('0.0.0.0', 8889)\n",
     "\n",
-    "data_file = './snapshots/00000000.hdf'\n",
+    "data_file = './snapshots/00000001.hdf'\n",
     "affs_ds = daisy.open_ds(data_file, 'volumes/affinities')\n",
     "affs_ds.data = np.array(affs_ds.data, dtype=np.float32)\n",
     "labels_ds = daisy.open_ds(data_file, 'volumes/labels/neuron_ids')\n",
@@ -136,6 +153,112 @@
     "    funlibng.add_layer(s, affs_ds, 'affinities', shader='rgb')\n",
     "\n",
     "print(viewer.__str__().replace(\"localhost\", my_ip))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 0.3\n",
+    "## Extend the data manipulation pipeline from before by adding data augmentations. \n",
+    "\n",
+    "Observe how different augmentations and parameters thereof change the output by visualizing your data with neuroglancer.\n",
+    "\n",
+    "An example of how to use augmentation is given below. Play around with augmentation parameters and add more augmentation types. For more information about what type of augmentations are available in gunpowder see: http://funkey.science/gunpowder/api.html#augmentation-nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from __future__ import print_function\n",
+    "from gunpowder import *\n",
+    "from gunpowder.tensorflow import *\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import math\n",
+    "\n",
+    "\n",
+    "# A simple gunpowder pipeline for loading and manipulating data:\n",
+    "data_dir = '../../jan/segmentation/data'\n",
+    "\n",
+    "samples = [\n",
+    "    'sample_A',\n",
+    "    'sample_B',\n",
+    "    'sample_C'\n",
+    "]\n",
+    "\n",
+    "\n",
+    "# Define gunpowder variables of interest:\n",
+    "raw = ArrayKey('RAW') # Raw EM data\n",
+    "labels = ArrayKey('GT_LABELS') # ground truth neuron segmentation \n",
+    "affinities = ArrayKey('GT_AFFINITIES') # affinities\n",
+    "\n",
+    "# Voxel size is the physical size of one voxel (=3D pixel) in nm.\n",
+    "voxel_size = Coordinate((40, 4, 4))\n",
+    "batch_size = Coordinate((30,1000,1000)) * voxel_size\n",
+    "\n",
+    "# Request all the data you need for training:\n",
+    "request = BatchRequest()\n",
+    "request.add(raw, batch_size)\n",
+    "request.add(labels, batch_size)\n",
+    "request.add(affinities, batch_size)\n",
+    "\n",
+    "# Request a snapshot s.t. you are able to visualize the data in your pipeline.\n",
+    "snapshot_request = BatchRequest({\n",
+    "    raw: request[raw],\n",
+    "    labels: request[labels],\n",
+    "    affinities: request[affinities]\n",
+    "})\n",
+    "\n",
+    "# Note that the data only provides raw and neuron_ids which is the neuron segmentation.\n",
+    "# However, we need affinities which we can generate from neuron_ids by using gunpowder (see below):\n",
+    "data_sources = tuple(\n",
+    "    N5Source(\n",
+    "        os.path.join(data_dir, sample + '.n5'),\n",
+    "        datasets = {\n",
+    "            raw: 'volumes/raw',\n",
+    "            labels: 'volumes/labels/neuron_ids',\n",
+    "        },\n",
+    "        array_specs = {\n",
+    "            raw: ArraySpec(interpolatable=True),\n",
+    "            labels: ArraySpec(interpolatable=False)\n",
+    "        }\n",
+    "    ) +\n",
+    "    Normalize(raw) + \n",
+    "    RandomLocation()\n",
+    "    for sample in samples\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "# Define a neighborhood for affinities:\n",
+    "neighborhood = [[-1, 0, 0], [0, -1, 0], [0, 0, -1]]\n",
+    "\n",
+    "pipeline = (\n",
+    "    data_sources +\n",
+    "    RandomProvider() +\n",
+    "    ElasticAugment(\n",
+    "            control_point_spacing=[4,40,40],\n",
+    "            jitter_sigma=[0,2,2],\n",
+    "            rotation_interval=[0,math.pi/2.0],\n",
+    "            prob_slip=0.05,\n",
+    "            prob_shift=0.05,\n",
+    "            max_misalign=10,\n",
+    "            subsample=8) +\n",
+    "    SimpleAugment(transpose_only=[1, 2]) +\n",
+    "    IntensityAugment(raw, 0.9, 1.1, -0.1, 0.1, z_section_wise=True) +\n",
+    "    AddAffinities(neighborhood,\n",
+    "                 labels=labels,\n",
+    "                 affinities=affinities) +\n",
+    "    Snapshot({raw: 'volumes/raw',\n",
+    "              labels: 'volumes/labels/neuron_ids',\n",
+    "              affinities: 'volumes/affinities'}))\n",
+    "    \n",
+    "    \n",
+    "with build(pipeline) as b:\n",
+    "    b.request_batch(request)"
    ]
   },
   {
@@ -614,9 +737,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:segmentation]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-segmentation-py"
   },
   "language_info": {
    "codemirror_mode": {
