Simplify augmentation pipeline

--- a/solutions/training_solution.ipynb
+++ b/solutions/training_solution.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,8 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "\n",
     "# A simple gunpowder pipeline for loading and manipulating data:\n",
     "data_dir = '../../jan/segmentation/data'\n",
-    "\n",
-    "samples = [\n",
-    "    'sample_A',\n",
-    "    'sample_B',\n",
-    "    'sample_C'\n",
-    "]\n",
-    "\n",
     "\n",
     "# Define gunpowder variables of interest:\n",
     "raw = ArrayKey('RAW') # Raw EM data\n",
@@ -41,13 +33,18 @@
     "\n",
     "# Voxel size is the physical size of one voxel (=3D pixel) in nm.\n",
     "voxel_size = Coordinate((40, 4, 4))\n",
-    "batch_size = Coordinate((30,1000,1000)) * voxel_size\n",
+    "batch_size = Coordinate((50,1000,1000)) * voxel_size\n",
     "\n",
     "# Request all the data you need for training:\n",
     "request = BatchRequest()\n",
     "request.add(raw, batch_size)\n",
     "request.add(labels, batch_size)\n",
     "request.add(affinities, batch_size)\n",
+    "\n",
+    "selec_roi = Roi(offset=(3000,5000,5100), shape=batch_size)\n",
+    "request[raw].roi = selec_roi\n",
+    "request[labels].roi = selec_roi\n",
+    "request[affinities].roi = selec_roi\n",
     "\n",
     "# Request a snapshot s.t. you are able to visualize the data in your pipeline.\n",
     "snapshot_request = BatchRequest({\n",
@@ -70,27 +67,118 @@
     "            labels: ArraySpec(interpolatable=False)\n",
     "        }\n",
     "    ) +\n",
-    "    Normalize(raw) + \n",
-    "    RandomLocation()\n",
-    "    for sample in samples\n",
+    "    Normalize(raw)\n",
+    "    for sample in [\"sample_C\"]\n",
     "    )\n",
     "\n",
-    "\n",
     "# Define a neighborhood for affinities:\n",
-    "neighborhood = [[-1, 0, 0], [0, -1, 0], [0, 0, -1]]\n",
+    "neighborhood = [[-1, 0, 0], [0, -1, 0], [0, 0, -1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build the actual data-pipeline:\n",
     "\n",
-    "pipeline = (\n",
-    "    data_sources +\n",
-    "    RandomProvider() +\n",
-    "    AddAffinities(neighborhood,\n",
-    "                 labels=labels,\n",
-    "                 affinities=affinities) +\n",
-    "    Snapshot({raw: 'volumes/raw',\n",
-    "              labels: 'volumes/labels/neuron_ids',\n",
-    "              affinities: 'volumes/affinities'}))\n",
-    "    \n",
-    "    \n",
-    "with build(pipeline) as b:\n",
+    "def basic_pipeline():\n",
+    "    pipeline = (\n",
+    "        data_sources +\n",
+    "        RandomProvider() +\n",
+    "        AddAffinities(neighborhood,\n",
+    "                     labels=labels,\n",
+    "                     affinities=affinities) +\n",
+    "        Snapshot(dataset_names={raw: 'volumes/raw',\n",
+    "                  labels: 'volumes/labels/neuron_ids',\n",
+    "                  affinities: 'volumes/affinities'},\n",
+    "                  output_filename=\"snapshot_basic.hdf\"))\n",
+    "    return pipeline\n",
+    "\n",
+    "def simple_augment_pipeline():\n",
+    "    pipeline = (\n",
+    "        data_sources +\n",
+    "        RandomProvider() +\n",
+    "        SimpleAugment(transpose_only=[1, 2]) +\n",
+    "        AddAffinities(neighborhood,\n",
+    "                     labels=labels,\n",
+    "                     affinities=affinities) +\n",
+    "        Snapshot(dataset_names={raw: 'volumes/raw',\n",
+    "                  labels: 'volumes/labels/neuron_ids',\n",
+    "                  affinities: 'volumes/affinities'},\n",
+    "                  output_filename=\"snapshot_simple.hdf\"))\n",
+    "    return pipeline\n",
+    "\n",
+    "def intensity_augment_pipeline():\n",
+    "    pipeline = (\n",
+    "        data_sources +\n",
+    "        RandomProvider() +\n",
+    "        IntensityAugment(raw, 0.9, 1.1, -0.1, 0.1, z_section_wise=True) +    \n",
+    "        AddAffinities(neighborhood,\n",
+    "                     labels=labels,\n",
+    "                     affinities=affinities) +\n",
+    "        Snapshot(dataset_names={raw: 'volumes/raw',\n",
+    "                  labels: 'volumes/labels/neuron_ids',\n",
+    "                  affinities: 'volumes/affinities'},\n",
+    "                  output_filename=\"snapshot_intensity.hdf\"))\n",
+    "    return pipeline\n",
+    "\n",
+    "def elastic_augment_pipeline():\n",
+    "    pipeline = (\n",
+    "        data_sources +\n",
+    "        RandomProvider() +\n",
+    "        ElasticAugment(\n",
+    "            control_point_spacing=[4,40,40],\n",
+    "            jitter_sigma=[0,2,2],\n",
+    "            rotation_interval=[0,math.pi/2.0],\n",
+    "            prob_slip=0.05,\n",
+    "            prob_shift=0.05,\n",
+    "            max_misalign=10,\n",
+    "            subsample=8) +\n",
+    "        AddAffinities(neighborhood,\n",
+    "                     labels=labels,\n",
+    "                     affinities=affinities) +\n",
+    "        Snapshot(dataset_names={raw: 'volumes/raw',\n",
+    "                  labels: 'volumes/labels/neuron_ids',\n",
+    "                  affinities: 'volumes/affinities'},\n",
+    "                  output_filename=\"snapshot_elastic.hdf\"))\n",
+    "    return pipeline\n",
+    "\n",
+    "pipeline_setups={\"basic\": basic_pipeline,\n",
+    "                 \"simple\": simple_augment_pipeline,\n",
+    "                 \"intensity\": intensity_augment_pipeline,\n",
+    "                 \"elastic\": elastic_augment_pipeline}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Choose a pipeline and understand how different augmentation types influence the output.\n",
+    "\n",
+    "### You can choose between:\n",
+    "1. basic (No augmentations)\n",
+    "2. simple\n",
+    "3. intensity \n",
+    "4. elastic\n",
+    "\n",
+    "Try to find out what each of these are actually doing!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choose a pipeline, run it and observe the differences in neuroglancer.\n",
+    "pipeline_name = \"simple\"\n",
+    "\n",
+    "\n",
+    "pipeline_setup = pipeline_setups[pipeline_name]\n",
+    "\n",
+    "with build(pipeline_setup()) as b:\n",
     "    b.request_batch(request)"
    ]
   },
@@ -103,56 +191,61 @@
     "\n",
     "Exercise 0.1 generated a file in your working directory containg the raw EM data, neuron segmentation and affinities. The following script lets you view the data. Run both cells below and click on the resulting link. You can enable and disable layers by clicking on them. Explore the data. What do the different colors of the affinities mean? How does it relate to the segmentation?\n",
     "\n",
-    "If you double click on a particular segment neuroglancer allows you to view the 3D mesh of the object."
+    "If you double click on a particular segment neuroglancer allows you to view the 3D mesh of the object.\n",
+    "\n",
+    "### Dataset:\n",
+    "The data you are looking at are a tiny subset of the **whole** adult Drosophila brain, imaged via serial section transmission electron microscopy (SSTEM) ([Zheng et al. 2018](https://www.sciencedirect.com/science/article/pii/S0092867418307876)). If you are curious and want to get a sense of the scale, [here](https://fafb.catmaid.virtualflybrain.org/?pid=1&zp=127040&yp=253133.36932477387&xp=585045.0300033365&tool=navigator&sid0=1&s0=7.400000000000001) you can browse the entire dataset. Zooming in and out is a lot of fun, don't get lost.\n",
+    "\n",
+    "The particular cutout you are looking at here, is itself a small cutout of the [CREMI](https://cremi.org/) challenge volumes: a neuron and synapse segmentation challenge that provides manually acquired ground truth and provides a way to quantitatively compare competing algorithmic approaches."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "Unable to open file (unable to open file: name = './snapshots/00000001.hdf', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-698436d39dbb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mdata_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'./snapshots/00000001.hdf'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0maffs_ds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdaisy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen_ds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'volumes/affinities'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0maffs_ds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maffs_ds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mlabels_ds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdaisy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen_ds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'volumes/labels/neuron_ids'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Code/wh2019_segmentation/src/daisy/daisy/datasets.py\u001b[0m in \u001b[0;36mopen_ds\u001b[0;34m(filename, ds_name, mode)\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m         \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"opening H5 dataset %s in %s\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mds_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 97\u001b[0;31m         \u001b[0mds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5py\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mds_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     98\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m         \u001b[0mvoxel_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moffset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_read_voxel_size_offset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'C'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.6/site-packages/h5py/_hl/files.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, mode, driver, libver, userblock_size, swmr, rdcc_nslots, rdcc_nbytes, rdcc_w0, track_order, **kwds)\u001b[0m\n\u001b[1;32m    392\u001b[0m                 fid = make_fid(name, mode, userblock_size,\n\u001b[1;32m    393\u001b[0m                                \u001b[0mfapl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfcpl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmake_fcpl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrack_order\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrack_order\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 394\u001b[0;31m                                swmr=swmr)\n\u001b[0m\u001b[1;32m    395\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    396\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mswmr_support\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.6/site-packages/h5py/_hl/files.py\u001b[0m in \u001b[0;36mmake_fid\u001b[0;34m(name, mode, userblock_size, fapl, fcpl, swmr)\u001b[0m\n\u001b[1;32m    168\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mswmr\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mswmr_support\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    169\u001b[0m             \u001b[0mflags\u001b[0m \u001b[0;34m|=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mACC_SWMR_READ\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 170\u001b[0;31m         \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfapl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfapl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    171\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'r+'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    172\u001b[0m         \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mACC_RDWR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfapl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfapl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mh5py/h5f.pyx\u001b[0m in \u001b[0;36mh5py.h5f.open\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mOSError\u001b[0m: Unable to open file (unable to open file: name = './snapshots/00000001.hdf', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import neuroglancer\n",
     "import funlib.show.neuroglancer as funlibng\n",
     "import daisy\n",
     "import numpy as np\n",
     "\n",
-    "# Replace my_ip with your public paperspace ip as shown in your browser\n",
-    "my_ip = \"172.83.14.204\"\n",
-    "neuroglancer.set_server_bind_address('0.0.0.0', 8889)\n",
+    "# !!! IMPORTANT: Replace my_ip with your public paperspace ip as shown in your browser !!!\n",
     "\n",
-    "data_file = './snapshots/00000001.hdf'\n",
-    "affs_ds = daisy.open_ds(data_file, 'volumes/affinities')\n",
-    "affs_ds.data = np.array(affs_ds.data, dtype=np.float32)\n",
-    "labels_ds = daisy.open_ds(data_file, 'volumes/labels/neuron_ids')\n",
-    "raw_ds = daisy.open_ds(data_file, 'volumes/raw')\n",
+    "def view_snapshot(pipeline_name, my_ip=\"74.82.31.73\", snapshot_file=\"./snapshots/snapshot\"):\n",
+    "    neuroglancer.set_server_bind_address('0.0.0.0', 8889)\n",
+    "    snapshot_file = snapshot_file + \"_\" + pipeline_name + \".hdf\"\n",
+    "    \n",
+    "    affs_ds = daisy.open_ds(snapshot_file, 'volumes/affinities')\n",
+    "    affs_ds.data = np.array(affs_ds.data, dtype=np.float32)\n",
+    "    labels_ds = daisy.open_ds(snapshot_file, 'volumes/labels/neuron_ids')\n",
+    "    raw_ds = daisy.open_ds(snapshot_file, 'volumes/raw')\n",
     "\n",
-    "neuroglancer.set_server_bind_address('0.0.0.0')\n",
-    "viewer = neuroglancer.Viewer()\n",
-    "with viewer.txn() as s:\n",
-    "    funlibng.add_layer(s, raw_ds, 'raw')\n",
-    "    funlibng.add_layer(s, labels_ds, 'labels')\n",
-    "    funlibng.add_layer(s, affs_ds, 'affinities', shader='rgb')\n",
+    "    neuroglancer.set_server_bind_address('0.0.0.0')\n",
+    "    viewer = neuroglancer.Viewer()\n",
+    "    with viewer.txn() as s:\n",
+    "        funlibng.add_layer(s, raw_ds, 'raw')\n",
+    "        funlibng.add_layer(s, labels_ds, 'labels')\n",
+    "        funlibng.add_layer(s, affs_ds, 'affinities', shader='rgb')\n",
     "\n",
-    "print(viewer.__str__().replace(\"localhost\", my_ip))"
+    "    print(viewer.__str__().replace(\"localhost\", my_ip))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://74.82.31.73:46503/v/e1ab58481e08acbe872d076be15c2aeafee9e273/\n"
+     ]
+    }
+   ],
+   "source": [
+    "view_snapshot(pipeline_name)"
    ]
   },
   {
@@ -258,7 +351,9 @@
     "    \n",
     "    \n",
     "with build(pipeline) as b:\n",
-    "    b.request_batch(request)"
+    "    b.request_batch(request)\n",
+    "    \n",
+    "view_snapshot()"
    ]
   },
   {
