--- a/solutions/training_solution.ipynb
+++ b/solutions/training_solution.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,10 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
     "# Build the actual data-pipeline:\n",
     "\n",
     "def basic_pipeline():\n",
@@ -145,10 +146,39 @@
     "                  output_filename=\"snapshot_elastic.hdf\"))\n",
     "    return pipeline\n",
     "\n",
+    "\n",
+    "winter_is_coming=True\n",
+    "def king_of_the_north():\n",
+    "    pipeline = (\n",
+    "        data_sources +\n",
+    "        RandomProvider() +\n",
+    "        ElasticAugment(\n",
+    "            control_point_spacing=[4,40,40],\n",
+    "            jitter_sigma=[0,2,2],\n",
+    "            rotation_interval=[0,math.pi/2.0],\n",
+    "            prob_slip=0.05,\n",
+    "            prob_shift=0.05,\n",
+    "            max_misalign=10,\n",
+    "            subsample=8) +\n",
+    "        SimpleAugment(transpose_only=[1, 2]) +\n",
+    "        IntensityAugment(raw, 0.9, 1.1, -0.1, 0.1, z_section_wise=True) +\n",
+    "        AddAffinities(neighborhood,\n",
+    "                     labels=labels,\n",
+    "                     affinities=affinities) +\n",
+    "        Snapshot(dataset_names={raw: 'volumes/raw',\n",
+    "                  labels: 'volumes/labels/neuron_ids',\n",
+    "                  affinities: 'volumes/affinities'},\n",
+    "                  output_filename=\"snapshot_king.hdf\"))\n",
+    "                      \n",
+    "    return pipeline\n",
+    "\n",
     "pipeline_setups={\"basic\": basic_pipeline,\n",
     "                 \"simple\": simple_augment_pipeline,\n",
     "                 \"intensity\": intensity_augment_pipeline,\n",
-    "                 \"elastic\": elastic_augment_pipeline}"
+    "                 \"elastic\": elastic_augment_pipeline}\n",
+    "\n",
+    "if winter_is_coming:\n",
+    "    pipeline_setups.update({\"king_of_the_north\": king_of_the_north})"
    ]
   },
   {
@@ -162,18 +192,28 @@
     "2. simple\n",
     "3. intensity \n",
     "4. elastic\n",
+    "5. (*If you implemented it: king_of_the_north)\n",
     "\n",
     "Try to find out what each of these are actually doing!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/paperspace/.local/lib/python3.6/site-packages/scipy/ndimage/interpolation.py:605: UserWarning: From scipy 0.13.0, the output shape of zoom() is calculated with round() instead of int() - for these inputs the size of the returned array has changed.\n",
+      "  \"the returned array has changed.\", UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# Choose a pipeline, run it and observe the differences in neuroglancer.\n",
-    "pipeline_name = \"simple\"\n",
+    "pipeline_name = \"elastic\"\n",
     "\n",
     "\n",
     "pipeline_setup = pipeline_setups[pipeline_name]\n",
@@ -189,7 +229,7 @@
     "# Exercise 0.2 \n",
     "## Visualize data using neuroglancer\n",
     "\n",
-    "Exercise 0.1 generated a file in your working directory containg the raw EM data, neuron segmentation and affinities. The following script lets you view the data. Run both cells below and click on the resulting link. You can enable and disable layers by clicking on them. Explore the data. What do the different colors of the affinities mean? How does it relate to the segmentation?\n",
+    "Exercise 0.1 generated a file in your working directory containg the raw EM data, neuron segmentation and affinities. The following script lets you view the data you just generated and will change depending on which augmentation pipeline you choose. Run both cells below and click on the resulting link. You can enable and disable layers by clicking on them. Explore the data. What do the different colors of the affinities mean? How does it relate to the segmentation? How is augmentation affecting the data?\n",
     "\n",
     "If you double click on a particular segment neuroglancer allows you to view the 3D mesh of the object.\n",
     "\n",
@@ -201,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,14 +273,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://74.82.31.73:46503/v/e1ab58481e08acbe872d076be15c2aeafee9e273/\n"
+      "http://74.82.31.73:45325/v/3a164a418d62a25c1ae8b08b907b46d71fa4f30b/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in callback None()\n",
+      "handle: <Handle cancelled>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/paperspace/anaconda3/envs/segmentation/lib/python3.6/asyncio/events.py\", line 126, in _run\n",
+      "    self._callback(*self._args)\n",
+      "  File \"/home/paperspace/anaconda3/envs/segmentation/lib/python3.6/site-packages/tornado/platform/asyncio.py\", line 122, in _handle_events\n",
+      "    handler_func(fileobj, events)\n",
+      "  File \"/home/paperspace/anaconda3/envs/segmentation/lib/python3.6/site-packages/tornado/stack_context.py\", line 300, in null_wrapper\n",
+      "    return fn(*args, **kwargs)\n",
+      "  File \"/home/paperspace/anaconda3/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 713, in _handle_events\n",
+      "    self._handle_write()\n",
+      "  File \"/home/paperspace/anaconda3/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 1063, in _handle_write\n",
+      "    self._write_buffer.advance(num_bytes)\n",
+      "  File \"/home/paperspace/anaconda3/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 184, in advance\n",
+      "    assert 0 < size <= self._size\n",
+      "AssertionError\n"
      ]
     }
    ],
