--- a/solutions/01_training.ipynb
+++ b/solutions/01_training.ipynb
@@ -287,119 +287,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 0.3\n",
-    "## Extend the data manipulation pipeline from before by adding data augmentations. \n",
-    "\n",
-    "Observe how different augmentations and parameters thereof change the output by visualizing your data with neuroglancer.\n",
-    "\n",
-    "An example of how to use augmentation is given below. Play around with augmentation parameters and add more augmentation types. For more information about what type of augmentations are available in gunpowder see: http://funkey.science/gunpowder/api.html#augmentation-nodes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from __future__ import print_function\n",
-    "from gunpowder import *\n",
-    "from gunpowder.tensorflow import *\n",
-    "import numpy as np\n",
-    "import os\n",
-    "import math\n",
-    "\n",
-    "\n",
-    "# A simple gunpowder pipeline for loading and manipulating data:\n",
-    "data_dir = '../../jan/segmentation/data'\n",
-    "\n",
-    "samples = [\n",
-    "    'sample_A',\n",
-    "    'sample_B',\n",
-    "    'sample_C'\n",
-    "]\n",
-    "\n",
-    "\n",
-    "# Define gunpowder variables of interest:\n",
-    "raw = ArrayKey('RAW') # Raw EM data\n",
-    "labels = ArrayKey('GT_LABELS') # ground truth neuron segmentation \n",
-    "affinities = ArrayKey('GT_AFFINITIES') # affinities\n",
-    "\n",
-    "# Voxel size is the physical size of one voxel (=3D pixel) in nm.\n",
-    "voxel_size = Coordinate((40, 4, 4))\n",
-    "batch_size = Coordinate((30,1000,1000)) * voxel_size\n",
-    "\n",
-    "# Request all the data you need for training:\n",
-    "request = BatchRequest()\n",
-    "request.add(raw, batch_size)\n",
-    "request.add(labels, batch_size)\n",
-    "request.add(affinities, batch_size)\n",
-    "\n",
-    "# Request a snapshot s.t. you are able to visualize the data in your pipeline.\n",
-    "snapshot_request = BatchRequest({\n",
-    "    raw: request[raw],\n",
-    "    labels: request[labels],\n",
-    "    affinities: request[affinities]\n",
-    "})\n",
-    "\n",
-    "# Note that the data only provides raw and neuron_ids which is the neuron segmentation.\n",
-    "# However, we need affinities which we can generate from neuron_ids by using gunpowder (see below):\n",
-    "data_sources = tuple(\n",
-    "    N5Source(\n",
-    "        os.path.join(data_dir, sample + '.n5'),\n",
-    "        datasets = {\n",
-    "            raw: 'volumes/raw',\n",
-    "            labels: 'volumes/labels/neuron_ids',\n",
-    "        },\n",
-    "        array_specs = {\n",
-    "            raw: ArraySpec(interpolatable=True),\n",
-    "            labels: ArraySpec(interpolatable=False)\n",
-    "        }\n",
-    "    ) +\n",
-    "    Normalize(raw) + \n",
-    "    RandomLocation()\n",
-    "    for sample in samples\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "# Define a neighborhood for affinities:\n",
-    "neighborhood = [[-1, 0, 0], [0, -1, 0], [0, 0, -1]]\n",
-    "\n",
-    "pipeline = (\n",
-    "    data_sources +\n",
-    "    RandomProvider() +\n",
-    "    ElasticAugment(\n",
-    "            control_point_spacing=[4,40,40],\n",
-    "            jitter_sigma=[0,2,2],\n",
-    "            rotation_interval=[0,math.pi/2.0],\n",
-    "            prob_slip=0.05,\n",
-    "            prob_shift=0.05,\n",
-    "            max_misalign=10,\n",
-    "            subsample=8) +\n",
-    "    SimpleAugment(transpose_only=[1, 2]) +\n",
-    "    IntensityAugment(raw, 0.9, 1.1, -0.1, 0.1, z_section_wise=True) +\n",
-    "    AddAffinities(neighborhood,\n",
-    "                 labels=labels,\n",
-    "                 affinities=affinities) +\n",
-    "    Snapshot({raw: 'volumes/raw',\n",
-    "              labels: 'volumes/labels/neuron_ids',\n",
-    "              affinities: 'volumes/affinities'}))\n",
-    "    \n",
-    "    \n",
-    "with build(pipeline) as b:\n",
-    "    b.request_batch(request)\n",
-    "    \n",
-    "view_snapshot()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Exercise 1\n",
     "## Using gunpowder with tensorflow for training a 3D-UNet for affinity prediction\n",
     "#### mknet.py\n",
     "\n",
-    "In this exercise we ask you to fill in the given template file to create a computation graph for your neural network. Follow the instructions in the code and make use of help and documentations.\n",
+    "In this exercise we ask you to pick a network of your choosing to create a computation graph for your neural network. Follow the instructions in the code and make use of help and documentations.\n",
     "\n",
     "As usual if you are not sure about what a function does or what its argument is navigate to the function and press ```shift + tab``` to display arguments and documentation."
    ]
@@ -437,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +338,8 @@
     "import tensorflow as tf\n",
     "import json\n",
     "\n",
-    "def create_network(name, input_shape, n_features_0, n_features_mult, downsampling):\n",
+    "\n",
+    "def create_network(name, input_shape, num_fmaps, fmap_inc_factors, downsample_factors):\n",
     "\n",
     "    tf.reset_default_graph()\n",
     "\n",
@@ -457,9 +350,9 @@
     "\n",
     "        unet, _, _ = models.unet(\n",
     "                raw_batched,\n",
-    "                12,\n",
-    "                5,\n",
-    "                [[1,3,3],[1,3,3],[3,3,3]])\n",
+    "                num_fmaps,\n",
+    "                fmap_inc_factors,\n",
+    "                downsample_factors)\n",
     "\n",
     "        affs_batched, _ = models.conv_pass(\n",
     "            unet,\n",
@@ -512,62 +405,113 @@
     "\n",
     "        with open(name + '.json', 'w') as f:\n",
     "            json.dump(config, f)\n",
-    "            \n",
-    "        print(\"\\nVALAR MORGHULIS\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Small but fast\n",
-    "\"\"\"\n",
-    "arya = {\"name\": \"arya\", \n",
-    "        \"input_shape\": (84, 268, 268),\n",
-    "        \"n_features_0\": 12,\n",
-    "        \"n_features_mult\": 1,\n",
-    "        \"downsampling\": [[1,3,3],[1,3,3],[3,3,3]]}\n",
-    "\n",
-    "\"\"\"\n",
-    "Strong but shallow\n",
-    "\"\"\"\n",
-    "john = {\"name\": \"john\", \n",
-    "        \"input_shape\": (84, 268, 268),\n",
-    "        \"n_features_0\": 12,\n",
-    "        \"n_features_mult\": 8,\n",
-    "        \"downsampling\": [[1,3,3],[6,6,6]]}\n",
-    "\n",
-    "\n",
-    "daenerys = {\"name\": \"daenerys\", \n",
-    "            \"input_shape\": (84, 268, 268),\n",
-    "            \"n_features_0\": 12,\n",
-    "            \"n_features_mult\": 1,\n",
-    "            \"downsampling\": [[1,3,3],[1,3,3],[3,3,3]]}\n",
-    "\n",
-    "cersei = {\"name\": \"cersei\", \n",
-    "            \"input_shape\": (84, 268, 268),\n",
-    "            \"n_features_0\": 12,\n",
-    "            \"n_features_mult\": 1,\n",
-    "            \"downsampling\": [[1,3,3],[1,3,3],[3,3,3]]}\n",
-    "\n",
-    "networks = {\"arya\": arya, \"john\": john, \"daenerys\": daenerys, \"cersei\": cersei}"
+    "        \n",
+    "        if name==\"arya\":\n",
+    "            print(\"\\nVALAR MORGHULIS\")\n",
+    "        if name==\"jon\":\n",
+    "            print(\"\\nFOR THE NORTH\")\n",
+    "        if name==\"daenerys\":\n",
+    "            print(\"\\nDRACARYS\")\n",
+    "        if name==\"cersei\":\n",
+    "            print(\"\\nJAIME!\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pick your network:"
+    "Below you find a selection of your favorite 3D-UNets in Westeros. Make use of the following documentation to decide which of these networks is to your liking."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "models.unet?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arya_stark = {\"name\": \"arya\", \n",
+    "        \"input_shape\": (84, 268, 268),\n",
+    "        \"num_fmaps\": 24,\n",
+    "        \"fmap_inc_factors\": 2,\n",
+    "        \"downsample_factors\": [[1,3,3],[4,12,12]]}\n",
+    "\n",
+    "jon_snow = {\"name\": \"jon\", \n",
+    "        \"input_shape\": (84, 268, 268),\n",
+    "        \"num_fmaps\": 12,\n",
+    "        \"fmap_inc_factors\": 5,\n",
+    "        \"downsample_factors\": [[1,3,3],[1,3,3],[3,3,3]]}\n",
+    "\n",
+    "daenerys_stormborn = {\"name\": \"daenerys\", \n",
+    "                      \"input_shape\": (84, 268, 268),\n",
+    "                      \"num_fmaps\": 12,\n",
+    "                      \"fmap_inc_factors\": 1,\n",
+    "                      \"downsample_factors\": [[1,3,3],[1,3,3],[3,3,3]]}\n",
+    "\n",
+    "cersei_lennister = {\"name\": \"cersei\", \n",
+    "                    \"input_shape\": (84, 268, 268),\n",
+    "                    \"num_fmaps\": 12,\n",
+    "                    \"fmap_inc_factors\": 1,\n",
+    "                    \"downsample_factors\": [[1,3,3],[1,3,3],[3,3,3]]}\n",
+    "\n",
+    "networks = {\"arya\": arya_stark, \"jon\": jon_snow, \"daenerys\": daenerys_stormborn, \"cersei\": cersei_lennister}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pick your network\n",
+    "Choose between Arya, Jon, Daenerys and Cersei described above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating U-Net layer 0\n",
+      "f_in: (1, 1, 84, 268, 268)\n",
+      "number of variables added: 16248, new total: 16248\n",
+      "    Creating U-Net layer 1\n",
+      "    f_in: (1, 24, 80, 88, 88)\n",
+      "    number of variables added: 93408, new total: 109656\n",
+      "        Creating U-Net layer 2\n",
+      "        f_in: (1, 48, 19, 7, 7)\n",
+      "        bottom layer\n",
+      "        f_out: (1, 96, 15, 3, 3)\n",
+      "        number of variables added: 373440, new total: 483096\n",
+      "    g_out: (1, 96, 15, 3, 3)\n",
+      "    g_out_upsampled: (1, 48, 60, 36, 36)\n",
+      "    f_left_cropped: (1, 48, 60, 36, 36)\n",
+      "    f_right: (1, 96, 60, 36, 36)\n",
+      "    f_out: (1, 48, 56, 32, 32)\n",
+      "    number of variables added: 2840976, new total: 3324072\n",
+      "g_out: (1, 48, 56, 32, 32)\n",
+      "g_out_upsampled: (1, 24, 56, 96, 96)\n",
+      "f_left_cropped: (1, 24, 56, 96, 96)\n",
+      "f_right: (1, 48, 56, 96, 96)\n",
+      "f_out: (1, 24, 52, 92, 92)\n",
+      "number of variables added: 57096, new total: 3381168\n",
+      "input shape : (84, 268, 268)\n",
+      "output shape: [52, 92, 92]\n",
+      "\n",
+      "VALAR MORGHULIS\n"
+     ]
+    }
+   ],
    "source": [
     "network = \"arya\"\n",
     "create_network(**networks[network])"
