--- a/solutions/01_training.ipynb
+++ b/solutions/01_training.ipynb
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,12 +453,12 @@
     "daenerys_stormborn = {\"name\": \"daenerys\", \n",
     "                      \"input_shape\": (84, 268, 268),\n",
     "                      \"num_fmaps\": 12,\n",
-    "                      \"fmap_inc_factors\": 1,\n",
-    "                      \"downsample_factors\": [[1,3,3],[1,3,3],[3,3,3]]}\n",
+    "                      \"fmap_inc_factors\": 2,\n",
+    "                      \"downsample_factors\": [[1,3,3],[1,3,3],[1,1,1],[1,1,1]]}\n",
     "\n",
     "cersei_lennister = {\"name\": \"cersei\", \n",
     "                    \"input_shape\": (84, 268, 268),\n",
-    "                    \"num_fmaps\": 12,\n",
+    "                    \"num_fmaps\": 100,\n",
     "                    \"fmap_inc_factors\": 1,\n",
     "                    \"downsample_factors\": [[1,3,3],[1,3,3],[3,3,3]]}\n",
     "\n",
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -484,36 +484,45 @@
      "text": [
       "Creating U-Net layer 0\n",
       "f_in: (1, 1, 84, 268, 268)\n",
-      "number of variables added: 16248, new total: 16248\n",
+      "number of variables added: 272900, new total: 272900\n",
       "    Creating U-Net layer 1\n",
-      "    f_in: (1, 24, 80, 88, 88)\n",
-      "    number of variables added: 93408, new total: 109656\n",
+      "    f_in: (1, 100, 80, 88, 88)\n",
+      "    number of variables added: 540200, new total: 813100\n",
       "        Creating U-Net layer 2\n",
-      "        f_in: (1, 48, 19, 7, 7)\n",
-      "        bottom layer\n",
-      "        f_out: (1, 96, 15, 3, 3)\n",
-      "        number of variables added: 373440, new total: 483096\n",
-      "    g_out: (1, 96, 15, 3, 3)\n",
-      "    g_out_upsampled: (1, 48, 60, 36, 36)\n",
-      "    f_left_cropped: (1, 48, 60, 36, 36)\n",
-      "    f_right: (1, 96, 60, 36, 36)\n",
-      "    f_out: (1, 48, 56, 32, 32)\n",
-      "    number of variables added: 2840976, new total: 3324072\n",
-      "g_out: (1, 48, 56, 32, 32)\n",
-      "g_out_upsampled: (1, 24, 56, 96, 96)\n",
-      "f_left_cropped: (1, 24, 56, 96, 96)\n",
-      "f_right: (1, 48, 56, 96, 96)\n",
-      "f_out: (1, 24, 52, 92, 92)\n",
-      "number of variables added: 57096, new total: 3381168\n",
+      "        f_in: (1, 100, 76, 28, 28)\n",
+      "        number of variables added: 540200, new total: 1353300\n",
+      "            Creating U-Net layer 3\n",
+      "            f_in: (1, 100, 24, 8, 8)\n",
+      "            bottom layer\n",
+      "            f_out: (1, 100, 20, 4, 4)\n",
+      "            number of variables added: 540200, new total: 1893500\n",
+      "        g_out: (1, 100, 20, 4, 4)\n",
+      "        g_out_upsampled: (1, 100, 60, 12, 12)\n",
+      "        f_left_cropped: (1, 100, 60, 12, 12)\n",
+      "        f_right: (1, 200, 60, 12, 12)\n",
+      "        f_out: (1, 100, 56, 8, 8)\n",
+      "        number of variables added: 1080300, new total: 2973800\n",
+      "    g_out: (1, 100, 56, 8, 8)\n",
+      "    g_out_upsampled: (1, 100, 56, 24, 24)\n",
+      "    f_left_cropped: (1, 100, 56, 24, 24)\n",
+      "    f_right: (1, 200, 56, 24, 24)\n",
+      "    f_out: (1, 100, 52, 20, 20)\n",
+      "    number of variables added: 900300, new total: 3874100\n",
+      "g_out: (1, 100, 52, 20, 20)\n",
+      "g_out_upsampled: (1, 100, 52, 60, 60)\n",
+      "f_left_cropped: (1, 100, 52, 60, 60)\n",
+      "f_right: (1, 200, 52, 60, 60)\n",
+      "f_out: (1, 100, 48, 56, 56)\n",
+      "number of variables added: 900300, new total: 4774400\n",
       "input shape : (84, 268, 268)\n",
-      "output shape: [52, 92, 92]\n",
+      "output shape: [48, 56, 56]\n",
       "\n",
-      "VALAR MORGHULIS\n"
+      "JAIME!\n"
      ]
     }
    ],
    "source": [
-    "network = \"arya\"\n",
+    "network = \"cersei\"\n",
     "create_network(**networks[network])"
    ]
   },
